[package]
name = "merge_img"
version = "0.1.0"
edition = "2021"

[dependencies]
# Image & PDF processing
image = "0.24"
printpdf = "0.7"

# Web framework
axum = { version = "0.7", features = ["multipart"] }  # ← Tambah feature multipart!
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"